<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:orientation="vertical" android:padding="10dp">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/uname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/unameTv" android:layout_marginEnd="20dp"
                android:layout_gravity="center_vertical"/>
        <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/nametext" android:layout_weight="0"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/umail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/emailTv" android:layout_marginEnd="20dp"
                android:layout_gravity="center_vertical"/>
        <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/mailtext" android:layout_weight="0"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="20dp" android:gravity="start">
        <Button
                android:text="@string/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/logoutBtn"
                android:layout_gravity="center_horizontal"
                style="@style/Widget.AppCompat.Button.Colored" android:layout_marginEnd="20dp"/>
        <Button
                android:text="@string/savefb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/savefbBtn"
                android:layout_gravity="center_horizontal"
                style="@style/Widget.AppCompat.Button.Colored"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="20dp" android:gravity="left">
        <Button
                android:text="@string/savesp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/savespBtn"
                android:layout_gravity="center_horizontal"
                style="@style/Widget.AppCompat.Button.Colored" android:layout_marginEnd="20dp"/>
        <Button
                android:text="@string/loadsp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/loadspBtn"
                android:layout_gravity="center_horizontal"
                style="@style/Widget.AppCompat.Button.Colored"/>
    </LinearLayout>
    <Button
            android:text="@string/play_snake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/playSnakeBtn" android:layout_marginTop="20dp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
</LinearLayout>